Fix tab alignment

--- a/frontend/src/metabase/nav/containers/MainNavbar/MainNavbarContainer/AddDataModal/AddDataModal.module.css
+++ b/frontend/src/metabase/nav/containers/MainNavbar/MainNavbarContainer/AddDataModal/AddDataModal.module.css
@@ -12,6 +12,10 @@
   gap: 2px;
 }
 
+.tabLabel {
+  text-align: start;
+}
+
 .panelContainer {
   display: flex;
   flex-direction: column;
